docs/api/qiskit/1.2/qiskit.qobj.GateCalibration.mdx
---
title: GateCalibration (v1.2)
description: API reference for qiskit.qobj.GateCalibration in qiskit v1.2
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.qobj.GateCalibration
---

# GateCalibration

<Class id="qiskit.qobj.GateCalibration" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/qobj/qasm_qobj.py#L526-L587" signature="qiskit.qobj.GateCalibration(name, qubits, params, instructions)" modifiers="class">
  Bases: [`object`](https://docs.python.org/3/library/functions.html#object "(in Python v3.13)")

  Each calibration specifies a unique gate by name, qubits and params, and contains the Pulse instructions to implement it.

  Initialize a single gate calibration. Instructions may reference waveforms which should be made available in the pulse\_library.

  <Admonition title="Deprecated since version 1.2" type="danger">
    The class `qiskit.qobj.qasm_qobj.GateCalibration` is deprecated as of qiskit 1.2. It will be removed in the 2.0 release. The Qobj class and related functionality are part of the deprecated BackendV1 workflow, and no longer necessary for BackendV2. If a user workflow requires Qobj it likely relies on deprecated functionality and should be updated to use BackendV2.
  </Admonition>

  **Parameters**

  *   **name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")) – Gate name.
  *   **qubits** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")*(*[*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*)*) – Qubits the gate applies to.
  *   **params** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")*(*[*complex*](https://docs.python.org/3/library/functions.html#complex "(in Python v3.13)")*)*) – Gate parameter values, if any.
  *   **instructions** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")*(*[*PulseQobjInstruction*](qiskit.qobj.PulseQobjInstruction "qiskit.qobj.PulseQobjInstruction")*)*) – The gate implementation.

  ## Methods

  ### from\_dict

  <Function id="qiskit.qobj.GateCalibration.from_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/qobj/qasm_qobj.py#L574-L587" signature="from_dict(data)" modifiers="classmethod">
    Create a new GateCalibration object from a dictionary.

    **Parameters**

    **data** ([*dict*](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.13)")) – A dictionary representing the GateCalibration to create. It will be in the same format as output by [`to_dict()`](#qiskit.qobj.GateCalibration.to_dict "qiskit.qobj.GateCalibration.to_dict").

    **Returns**

    The GateCalibration from the input dictionary.

    **Return type**

    [GateCalibration](#qiskit.qobj.GateCalibration "qiskit.qobj.GateCalibration")
  </Function>

  ### to\_dict

  <Function id="qiskit.qobj.GateCalibration.to_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/qobj/qasm_qobj.py#L564-L572" signature="to_dict()">
    Return a dictionary format representation of the Gate Calibration.

    **Returns**

    The dictionary form of the GateCalibration.

    **Return type**

    [dict](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.13)")
  </Function>
</Class>

